--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/BuoiHoc/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/BuoiHoc/Create.cshtml
@@ -9,7 +9,7 @@
 
     <nav aria-label="breadcrumb" class="mb-4">
         <ol class="breadcrumb bg-info bg-opacity-25 px-3 py-2 rounded">
-            <li class="breadcrumb-item"><a href="@Url.Action("Dashboard", "Home")">Trang chủ</a></li>
+            <li class="breadcrumb-item"><a href="@Url.Action("Index", "HomeAdmin")">Trang chủ</a></li>
             <li class="breadcrumb-item"><a href="@Url.Action("Index", "BuoiHoc")">Buổi học</a></li>
             <li class="breadcrumb-item active" aria-current="page">Thêm buổi học</li>
         </ol>
