--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Details.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Details.cshtml
@@ -12,7 +12,7 @@
 
     <nav aria-label="breadcrumb" class="mb-4">
         <ol class="breadcrumb bg-info bg-opacity-25 px-3 py-2 rounded">
-            <li class="breadcrumb-item"><a href="@Url.Action("Index", "Dashboard")">Trang chủ</a></li>
+            <li class="breadcrumb-item"><a href="@Url.Action("Index", "HomeAdmin")">Trang chủ</a></li>
             <li class="breadcrumb-item"><a href="@Url.Action("Index", "KhoaHoc")">Khóa học</a></li>
             <li class="breadcrumb-item active" aria-current="page">Chi tiết</li>
         </ol>
