--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Edit.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Edit.cshtml
@@ -16,7 +16,7 @@
 
     <nav aria-label="breadcrumb" class="mb-4">
         <ol class="breadcrumb bg-warning bg-opacity-25 px-3 py-2 rounded">
-            <li class="breadcrumb-item"><a href="@Url.Action("Index", "Dashboard")">Trang chủ</a></li>
+            <li class="breadcrumb-item"><a href="@Url.Action("Index", "HomeAdmin")">Trang chủ</a></li>
             <li class="breadcrumb-item"><a href="@Url.Action("Index", "KhoaHoc")">Khóa học</a></li>
             <li class="breadcrumb-item active" aria-current="page">Chỉnh sửa</li>
         </ol>
