--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Create.cshtml
@@ -11,7 +11,7 @@
     <!-- Breadcrumb -->
     <nav aria-label="breadcrumb" class="mb-4">
         <ol class="breadcrumb bg-info bg-opacity-25 px-3 py-2 rounded">
-            <li class="breadcrumb-item"><a href="@Url.Action("Dashboard", "Home")">Trang chủ</a></li>
+            <li class="breadcrumb-item"><a href="@Url.Action("Index", "HomeAdmin")">Trang chủ</a></li>
             <li class="breadcrumb-item"><a href="@Url.Action("Index", "LopHoc")">Lớp học</a></li>
             <li class="breadcrumb-item active" aria-current="page">Thêm lớp học</li>
         </ol>
